updating one last time

--- a/equipes/basketball-garcons-senior.html
+++ b/equipes/basketball-garcons-senior.html
@@ -289,7 +289,7 @@
               <img src="/ESGAGE/assets/img/sportslogos/basketball.png" alt="Basketball" style="width:64px;height:64px;object-fit:contain;"/>
             </div>
             <h1>Basketball — Garçons Senior</h1>
-            <p class="mb-0">Effectif, calendrier et classement HSSAA.</p>
+            <p class="mb-0">Équipe, calendrier et classement HSSAA.</p>
           </div>
         </div>
       </div>
@@ -310,7 +310,7 @@
       <a class="back-link" href="/ESGAGE/athletisme.html"><i class="bi bi-arrow-left"></i> Retour aux sports</a>
 
       <div class="mb-5 mt-2">
-        <p class="section-tab-title"><i class="bi bi-people-fill me-2" style="font-size:22px;vertical-align:middle;"></i>Effectif</p>
+        <p class="section-tab-title"><i class="bi bi-people-fill me-2" style="font-size:22px;vertical-align:middle;"></i>Équipe</p>
         <div class="roster-grid" id="roster-container"></div>
       </div>
 
