--- a/athletisme.html
+++ b/athletisme.html
@@ -284,7 +284,7 @@
             <p class="gender-col-title girls">Filles</p>
             <div class="d-flex flex-column gap-2">
               <a class="age-btn" href="/ESGAGE/equipes/crosscountry-filles-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-filles-junior.html">Junior</a>
+              <!--<a class="age-btn" href="/ESGAGE/equipes/crosscountry-filles-junior.html">Junior</a>-->
               <a class="age-btn" href="/ESGAGE/equipes/crosscountry-filles-senior.html">Senior</a>
             </div>
           </div>
@@ -294,7 +294,7 @@
             <p class="gender-col-title boys">Garçons</p>
             <div class="d-flex flex-column gap-2">
               <a class="age-btn" href="/ESGAGE/equipes/crosscountry-garcons-78.html">7<sup>e</sup>/8<sup>e</sup></a>
-              <a class="age-btn" href="/ESGAGE/equipes/crosscountry-garcons-junior.html">Junior</a>
+              <!--<a class="age-btn" href="/ESGAGE/equipes/crosscountry-garcons-junior.html">Junior</a>-->
               <a class="age-btn" href="/ESGAGE/equipes/crosscountry-garcons-senior.html">Senior</a>
             </div>
           </div>
