--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 /* ══ VIDEO HERO ═══════════════════════════════════════════════════════════ */
 #hero {
   position: relative;
-  min-height: 100vh;
+  min-height: 82vh;
   display: flex;
   align-items: center;
   overflow: hidden;
@@ -35,7 +35,7 @@
 
 #hero-video-container iframe {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   width: 177.78vh; /* 16:9 ratio */
   height: 100vh;
@@ -444,13 +444,6 @@ html.dark-mode .ranking-silver {
   </div>
 
   <div class="container hero-content">
-    <div data-aos="fade-down" data-aos-delay="50">
-      <div class="hero-eyebrow">
-        <img src="assets/img/gage-logo-small.png" alt="GAGE"/>
-        <span>Oakville, Ontario</span>
-      </div>
-    </div>
-
     <h1 data-aos="fade-up" data-aos-delay="100">
       École secondaire<br/><span>Gaétan‑Gervais</span>
     </h1>
@@ -460,11 +453,11 @@ html.dark-mode .ranking-silver {
     </p>
 
     <div class="hero-buttons" data-aos="fade-up" data-aos-delay="300">
-      <a class="hero-btn-primary" href="nouvelles.html">
-        <i class="bi bi-newspaper"></i> Voir les nouvelles
+      <a class="hero-btn-primary" href="academique.html">
+        <i class="bi bi-book-fill"></i> Académique
       </a>
       <a class="hero-btn-secondary" href="athletisme.html">
-        <i class="bi bi-trophy"></i> Sports
+        <i class="bi bi-trophy-fill"></i> Sports
       </a>
     </div>
   </div>
@@ -492,7 +485,7 @@ html.dark-mode .ranking-silver {
           <span>Événements et activités</span>
         </div>
       </a>
-      <a class="highlight-item" href="nouvelles.html">
+      <a class="highlight-item" href="academique.html">
         <i class="bi bi-megaphone-fill"></i>
         <div class="hi-text">
           <strong>Nouvelles</strong>
@@ -657,7 +650,7 @@ html.dark-mode .ranking-silver {
         </a>
       </div>
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-        <a class="quick-link-card" href="nouvelles.html">
+        <a class="quick-link-card" href="academique.html">
           <i class="bi bi-newspaper"></i>
           <div>
             <strong>Nouvelles</strong>
