--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ html.dark-mode .ranking-silver {
     </p>
 
     <div class="hero-buttons" data-aos="fade-up" data-aos-delay="300">
-      <a class="hero-btn-primary" href="academique.html">
+      <a class="hero-btn-secondary" href="academique.html">
         <i class="bi bi-book-fill"></i> Académique
       </a>
       <a class="hero-btn-secondary" href="athletisme.html">
@@ -595,18 +595,16 @@ html.dark-mode .ranking-silver {
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
-          <div class="stat-number">
-            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="9" data-purecounter-duration="1"></span>
-          </div>
-          <div class="stat-label">Sports</div>
+          <div class="stat-number">7 — 12</div>
+          <div class="stat-label">Niveaux scolaires</div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
         <div class="stat-card">
           <div class="stat-number">
-            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="54" data-purecounter-duration="1"></span>
+            <span class="purecounter" data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1"></span>%
           </div>
-          <div class="stat-label">Équipes</div>
+          <div class="stat-label">Francophone</div>
         </div>
       </div>
       <div class="col-lg-3 col-md-6">
