--- a/index.html
+++ b/index.html
@@ -485,11 +485,11 @@ html.dark-mode .ranking-silver {
           <span>Événements et activités</span>
         </div>
       </a>
-      <a class="highlight-item" href="academique.html">
-        <i class="bi bi-megaphone-fill"></i>
+      <a class="highlight-item" href="activite.html">
+        <i class="bi bi-stars"></i>
         <div class="hi-text">
-          <strong>Nouvelles</strong>
-          <span>Actualités de l'école</span>
+          <strong>Activité</strong>
+          <span>Vie étudiante et parascolaire</span>
         </div>
       </a>
       <a class="highlight-item" href="personnel.html">
@@ -648,11 +648,11 @@ html.dark-mode .ranking-silver {
         </a>
       </div>
       <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
-        <a class="quick-link-card" href="academique.html">
-          <i class="bi bi-newspaper"></i>
+        <a class="quick-link-card" href="activite.html">
+          <i class="bi bi-stars"></i>
           <div>
-            <strong>Nouvelles</strong>
-            <span>Dernières actualités de l'école</span>
+            <strong>Activité</strong>
+            <span>Vie étudiante et parascolaire</span>
           </div>
           <i class="bi bi-arrow-right arrow"></i>
         </a>
